# edge-cloud-task

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.cloud  Dockerfile.edge  README.md  docker-compose.yml  pyproject.toml
data/knowledge/: edge.txt  room_rules.txt  safety_regulations.txt
docs/: architecture.md  course_design_plan.md  course_report.md  safety_monitoring_implementation_plan.md
docs/report/: .gitignore  .latexmkrc  bibfile.bib  report.tex
docs/report/body/: appendices.tex  cover.tex  document.tex  figures.tex
public/yolo-v26/yolo26n-pose_openvino_model/: metadata.yaml
public/yolo-v26/yolo26s-pose_openvino_model/: metadata.yaml
scripts/: demo_test.py  download_pose_model.py  start_edge_dev.ps1
src/backend/: __init__.py
src/backend/cloud_api/: dependencies.py  main.py
src/backend/edge_api/: __init__.py  main.py
src/backend/shared/: __init__.py
src/cloud_api/: __init__.py  dependencies.py  main.py
src/cloud_api/cloud/: __init__.py  agent.py  search.py
src/cloud_api/routes/: agent.py
src/cloud_frontend/: index.html  package.json
src/cloud_frontend/src/: types.ts
src/edge_api/: main.py
src/edge_api/routes/: __init__.py  edge.py  state.py  tasks.py
src/edge_api/runtime/: debug.py  (+5 more)
src/edge_cloud_system/: __init__.py  cloud_server.py  edge_server.py
src/edge_frontend/: index.html  nginx.conf  package.json
src/frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
tests/: conftest.py  test_agent.py  test_cloud_events.py  test_detector.py  test_edge_collector_sync.py  test_edge_events.py  test_edge_lifespan.py  test_edge_pipeline.py  test_events_state.py  test_pose.py  test_reports.py  test_scheduler.py  test_webrtc_stream.py
(+111 files in other folders)
