[project]
name = "edge-cloud-agent-system"
version = "0.1.0"
description = "端-边-云协同的 YOLO 边缘检测、云端智能体与 Python 管理平台示例系统"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic-settings>=2.2.1",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "aiortc>=1.14.0",
]

[project.optional-dependencies]
yolo = [
    "opencv-python>=4.9.0",
    "onnxruntime>=1.18.0",
]
test = [
    "pytest>=8.2.0",
]

[project.scripts]
cloud-api = "backend.cloud_api.main:run"
edge-api = "backend.edge_api.main:run"
edge-run = "backend.edge_api.runtime.runner:main"

[build-system]
requires = ["setuptools>=69.5.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
